# RoDiLoCo

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
configs/: attack_signflip.yaml  defense_trustweighted.yaml  diloco_baseline.yaml  free_tier.yaml  phase1_smoke.yaml
docs/: related_work.md  research_journal.md
notebooks/: rodiloco_kaggle.ipynb  run_on_kaggle.ipynb
paper/: README.md  references.bib  rodiloco.tex
paper/figures/: .gitkeep
results/: README.md
scripts/: plot_results.py  prepare_data.py  reproduce_phase1.sh  reproduce_phase2_baseline.sh  reproduce_phase3_attacks.sh  reproduce_phase4_defenses.sh
src/rodiloco/: __init__.py  aggregators.py  attacks.py  data.py  diloco.py  generate.py  model.py  optim.py  tokenizer.py  train.py  utils.py
tests/: test_aggregators.py  test_attacks.py  test_diloco.py  test_model.py
